SUBDIRS = src/ccl/src \
		  src/simplify \
		  src/translate \
		  src/counterexample

launcherdir = $(prefix)
launcher_DATA = tools/vac.py \
			   tools/vac.sh

docsdir = $(prefix)
docs_DATA = tools/README \
			tools/TOOLS_README \
			tools/VAC_LICENSE

formulaedir = $(prefix)/formulae
formulae_DATA = tools/formulae/*

licensesdir = $(prefix)/licenses
licenses_DATA = tools/licenses/*

backendsdir = $(prefix)/bin
backend_DATA = tools/bin_64bit/*
